test/sema/typeck/trait/static-method-call-invalid-type-param.out
error: type `Int64` does not implement trait `Bar`.
--> static-method-call-invalid-type-param.dora:8:5
 | 
 | fn f[T: Foo](_x: T) {
 |     T::bar[Int](1);
       ~~~~~~~~~~~~~~
 | }
 | 
1 error found.
