test/sema/typeck/trait/static-method-call-invalid-type-param.dora
trait Foo {
    static fn bar[T: Bar](x: T);
}

trait Bar {}

fn f[T: Foo](x: T) {
    T::bar[Int](1);
}
